TODO 확인 및 수정 (db_error 를 cerror 에 추가 및 delete.go 간결한 로직으로 수정)
