# docs/swagger.json
@@ -8,6 +8,53 @@
     },
     "basePath": "/",
     "paths": {
+        "/api/auth/delete": {
+            "delete": {
+                "description": "회원 탈퇴",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "delete_user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "access token",
+                        "name": "auth-token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/cerror.CustomError400"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/cerror.CustomError401"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/cerror.CustomError500"
+                        }
+                    }
+                }
+            }
+        },
         "/api/auth/info": {
             "get": {
                 "description": "로그인한 자기 정보 가져오기",
@@ -36,60 +83,6 @@
                         "schema": {
                             "$ref": "#/definitions/login.GetInfo"
                         }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/cerror.CustomError400"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/cerror.CustomError401"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/cerror.CustomError500"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/auth/leave/{pwd}": {
-            "delete": {
-                "description": "회원 탈퇴",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "auth"
-                ],
-                "summary": "delete_user",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "access token",
-                        "name": "auth-token",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "패스워드",
-                        "name": "pwd",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -271,7 +264,7 @@
             }
         },
         "/api/auth/register": {
-            "put": {
+            "post": {
                 "description": "회원가입",
                 "consumes": [
                     "application/json"
@@ -297,9 +290,6 @@
                 "responses": {
                     "200": {
                         "description": "OK"
-                    },
-                    "201": {
-                        "description": "Created"
                     },
                     "400": {
                         "description": "Bad Request",
