# internal/handler/auth/login/delete.go
@@ -16,54 +16,23 @@ import (
 // @Accept json
 // @Produce json
 // @Param auth-token header string true "access token"
-// @Param pwd path string true "패스워드"
 // @Success 200
 // @Failure 400 {object} cerror.CustomError400
 // @Failure 401 {object} cerror.CustomError401
 // @Failure 500 {object} cerror.CustomError500
-// @Router /api/auth/leave/{pwd} [DELETE]
-func Leave(c *gin.Context) {
+// @Router /api/auth/delete [DELETE]
+func Delete(c *gin.Context) {
 
-	//path 에서 password 받아오기
-	pwd, isExist := c.Params.Get("pwd")
-	if !isExist {
-		panic(cerror.BadRequest())
-	}
-	//userid 받아오기
+	// TODO : 회원가입 로직 다시 생각해보기
+	//token 에서 아이디 불러와서
 	userId := middleware.GetReqManagerIdFromToken(c.Request)
-
-	//transaction 시작
-	tx := migrate.DB.Begin()
-	defer tx.Rollback()
-
-	//입력한 패스워드, 토큰에 맞는 아이디
-	var user = models.User{
-		Id:       userId,
-		Password: pwd,
+	// 그 아이디 쿼리 삭제
+	if err := migrate.DB.Delete(&models.User{
+		Id: userId,
+	}).Error; err != nil {
+		cerror.DBErr(err)
 	}
-	//기존 pw 가져오기
-	var pw string
-
-	if err := tx.Model(&models.User{}).
-		Where("id = ?", user.Id).
-		Select("password").
-		Take(&pw).Error; err != nil {
-		panic(cerror.DBErr(err))
-	}
-	//password 비교
-	if !PasswordCompare(pw, user.Password) {
-		panic(cerror.BadRequestWithMsg("비밀번호가 틀렸습니다."))
-	}
-
-	if err := tx.Delete(&user).Error; err != nil {
-		panic(cerror.DBErr(err))
-	}
-
-	tx.Commit()
-
-	//logout from all device
+	//session 로그아웃
 	session.Logout(userId)
-
-	//transaction 끝
-	c.JSON(http.StatusOK, "유저삭제 완료")
+	c.JSON(http.StatusOK, "회원 탈퇴 완료")
 }
